# event-planner

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
migrations/00000_create_events/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: create.html  event.html  event.rs.html  events.rs.html  index.html  index.rs.html
