[package]
name = "event-planner"
version = "0.1.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
clap = "2.32"
config = { version = "*", features = ["json"] }
diesel = { version = "1", features = ["sqlite"] }
futures = "0.1.25"
gotham = "0.3"
gotham_derive = "0.3"
handlebars = "1.1"
http = "0.1.16"
hyper = "0.12.25"
lazy_static = "1.3"
mime = "0.3.13"
reqwest = "0.9.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5.4"
url = "1.7.2"
uuid = { version = "0.7.2", features = ["serde", "v4"] }

[build-dependencies]
ructe = "0.6.2"
